--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "storytellerwizard.com",
+  "name": "mnemolibrary.com",
   "description": "",
   "version": "0.1.0",
   "dependencies": {
