--- a/package.json
+++ b/package.json
@@ -7,16 +7,19 @@
     "aws-sdk": "^2.509.0",
     "axios": "^0.19.0",
     "bluebird": "^3.5.5",
+    "crunker": "^0.2.0",
     "crypto": "^1.0.1",
     "express": "^4.17.1",
     "faker": "^4.1.0",
     "fullstack-serverless": "^0.6.1",
+    "hark": "^1.2.3",
     "jsonwebtoken": "^8.5.1",
     "jssoup": "0.0.10",
     "jwk-to-pem": "^2.0.1",
     "jwks-rsa": "^1.6.0",
     "mongo-express": "^0.53.0",
     "mongoose": "^5.6.9",
+    "mqtt": "^3.0.0",
     "ms": "^2.1.2",
     "mustache": "^3.0.1",
     "node-expat": "^2.3.18",
@@ -31,8 +34,10 @@
     "serverless-offline": "^5.10.1",
     "serverless-secrets-plugin": "^0.1.0",
     "simple-get": "^3.0.3",
+    "typescript": "^3.6.3",
     "uuidv4": "^4.0.0",
-    "validator": "^11.1.0"
+    "validator": "^11.1.0",
+    "wikijs": "^6.0.0"
   },
   "scripts": {
     "start": "concurrently --kill-others-on-fail  \"npm run server\" \"npm run client\" ",
