update runlocal with recent values for oauth, keyboard shortcuts for disco/review

--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
     "@nivo/pie": "^0.59.0",
     "@nivo/tooltip": "^0.59.0",
     "axios": "^0.19.2",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^4.6.0",
     "bootstrap-toggle": "^2.2.2",
     "compromise": "^11.14.3",
     "dns": "^0.2.2",
@@ -21,13 +21,13 @@
     "nivo": "^0.31.0",
     "nodemailer": "^4.6.3",
     "npm": "^6.13.7",
-    "popper": "^1.0.1",
     "popper.js": "^1.16.1",
     "pug": "^2.0.4",
     "react": "^16.12.0",
     "react-adsense": "0.0.5",
     "react-app-polyfill": "^1.0.6",
     "react-autocomplete": "^1.8.1",
+    "react-bootstrap": "^1.6.1",
     "react-bootstrap-toggle": "^2.3.1",
     "react-confirm-alert": "^2.4.1",
     "react-cropper": "^1.3.0",
