--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   },
   "scripts": {
     "start": "concurrently --kill-others-on-fail  \"npm run server\" \"npm run client\" ",
-    "server": "sls offline --skipCacheInvalidation --port 4000",
+    "server": "sls offline --skipCacheInvalidation  --disableCookieValidation --port 4000",
     "client": "cd client && npm start"
   },
   "devDependencies": {
