--- a/package.json
+++ b/package.json
@@ -4,49 +4,33 @@
   "version": "0.1.0",
   "dependencies": {
     "amazon-cognito-auth-js": "^1.3.3",
-    "aws-sdk": "^2.1253.0",
-    "axios": "^1.1.3",
     "bluebird": "^3.7.2",
-    "crunker": "^2.0.0",
     "crypto": "^1.0.1",
     "express": "^4.18.2",
-    "faker": "^6.6.6",
-    "fullstack-serverless": "^0.8.0",
-    "hark": "^1.2.3",
+    "google-auth-library": "^8.7.0",
     "jsonwebtoken": "^8.5.1",
-    "jssoup": "0.0.15",
-    "jwk-to-pem": "^2.0.5",
-    "jwks-rsa": "^3.0.0",
-    "mongo-express": "^1.0.0",
     "mongoose": "^6.7.2",
-    "mqtt": "^4.3.7",
-    "ms": "^2.1.3",
     "mustache": "^4.2.0",
-    "node-expat": "^2.4.0",
     "node-fetch": "^3.3.0",
-    "node-xml-slicer": "^1.0.0",
-    "nodemailer": "^6.8.0",
-    "papaparse": "^5.3.2",
-    "qs": "^6.11.0",
-    "request": "^2.88.0",
-    "serverless-dynamodb-local": "^0.2.40",
+    "request": "^2.88.2",
     "serverless-http": "^3.1.0",
-    "serverless-offline": "^11.3.0",
-    "serverless-secrets-plugin": "^0.1.0",
     "simple-get": "^4.0.1",
     "typescript": "^4.8.4",
     "uuidv4": "^6.2.13",
-    "validator": "^13.7.0",
-    "wikijs": "^6.4.0"
+    "validator": "^13.7.0"
   },
   "scripts": {
     "start": "concurrently --kill-others-on-fail  \"npm run server\" \"npm run client\" ",
-    "server": "sls offline --skipCacheInvalidation  --disableCookieValidation --port 4000",
+    "server": "sls offline   --disableCookieValidation --port 4000",
     "client": "cd client && npm start"
   },
   "devDependencies": {
+    "aws-sdk": "^2.1255.0",
     "concurrently": "^7.5.0",
+    "fullstack-serverless": "^0.8.0",
     "serverless-cloudfront-distribution-certificate": "0.0.8",
-    "serverless-s3-sync": "^3.1.0"
+    "serverless-offline": "^11.3.0",
+    "serverless-s3-sync": "^3.1.0",
+    "serverless-secrets-plugin": "^0.1.0"
   }
 }
